--- a/src/main/resources/static/buyer.html
+++ b/src/main/resources/static/buyer.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>购书页面</title>
+    <title>购买页面</title>
     <link rel="stylesheet" href="css/buyer-page.css">
 </head>
 
