--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -40,13 +40,14 @@
         },
 
         methods: {
-            handlegetById(){
-                axios.post('/user', this.user).then((res)=>{
-                       if(res.data.success){
-                           window.location.href = 'buyer.html'
-                       } else {
-                            alert(res.data.errorMsg);
-                       }
+            handlegetById() {
+                axios.post('/user', this.user).then((res) => {
+                    if (res.data.success) {
+                        document.cookie = res.data.data;
+                        window.location.href = 'buyer.html'
+                    } else {
+                        alert(res.data.errorMsg);
+                    }
                 })
             }
         },
