--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login!</title>
     <link rel="stylesheet" href="css/login-page.css">
-    <link rel="stylesheet" href="../elementui/index.css">
-    <link rel="stylesheet" href="../plugins/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="./elementui/index.css">
+    <link rel="stylesheet" href="./plugins/font-awesome/css/font-awesome.min.css">
 </head>
 
 <body>
